# ecr-ocr-cli

./: .dockerignore  .env.example  CLAUDE.md  DOCKER.md  Dockerfile  LICENSE  Makefile  PRODUCTION_IMPROVEMENTS.md  QUICKSTART.md  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  run.py
.github/workflows/: ci.yml
electoral_search/: __init__.py  cache.py  cli.py  config.py  export.py  ocr.py  parallel.py  text_processing.py  types.py  validation.py
tests/: __init__.py  test_cache.py  test_config.py  test_export.py  test_parallel.py  test_text_processing.py  test_validation.py
