[tool.poetry]
name = "electoral-search"
version = "2.1.0"
description = "Production-ready OCR-based search tool for Bengali electoral roll PDFs"
authors = ["Debapriya Das"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/light-bringer/ecr-ocr-cli"
repository = "https://github.com/light-bringer/ecr-ocr-cli"
keywords = ["ocr", "tesseract", "bengali", "electoral", "pdf", "search", "fuzzy-matching"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Utilities",
]
packages = [
    { include = "electoral_search" }
]

[tool.poetry.dependencies]
python = "^3.13"
pytesseract = "0.3.13"
pdf2image = "1.17.0"
pillow = "12.0.0"
rapidfuzz = "3.14.3"
typer = {extras = ["all"], version = "0.20.0"}
rich = "14.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
black = "^25.12.0"
mypy = "^1.14.1"
bandit = "^1.8.0"
ruff = "^0.14.10"

[tool.poetry.scripts]
electoral-search = "electoral_search.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | \.tox
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=electoral_search --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "S",   # bandit security
]
ignore = [
    "E501",  # line too long (handled by black)
    "S101",  # use of assert (ok in tests)
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests

[tool.coverage.run]
source = ["electoral_search"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
